# fastapi-tutorial

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  todo-apps-AutoDeployTrigger-440a2b5b-1258-4f20-ad9e-798cfbcae38c.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: todo.py
app/core/: config.py  logging.py
app/crud/: todo.py
app/db/: base.py  session.py
app/models/: base.py  todo.py
app/schemas/: base.py  todo.py
app/tests/: conftest.py
app/tests/test_api/: test_todo.py
app/tests/test_crud/: test_todo.py
app/utils/: to_camel.py
migrations/: env.py
migrations/versions/: 07aa53083713_uuid_허용.py  4c38087b1a3c_uuid_수정.py  64f557ef556a_uuid_수정.py  7e56e1a87120_init_db.py  b09a15c65810_일부_필드_변경.py  fdd10a4ba5ce_base_수정.py
