[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Eatcoding",email = "trivialcoding6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "gunicorn==20.1.0",
    "pydantic==2.7.1",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
